Fixed desc. in attraction box to display ellipsis if text overflow

--- a/frontend/src/styles/components/attraction_index.scss
+++ b/frontend/src/styles/components/attraction_index.scss
@@ -36,19 +36,35 @@
 
   .attractionDescription{
     font-size: smaller;
-    margin-top: 10px;
+    margin-top: 5px;
+    width:100%;
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    position: absolute;
+    padding-bottom: 2px;
+    
   }
 
   .attractionRating{
-    margin-top: 40px;
+    margin-top: 5px;
   }
+
+
+
+
+
+
   .attractionContent {
-    margin-top: 5%;
+    
+    margin-top: 1%;
     float: left;
     // width: 50%;
     width: 225px;
     height: 240px;
     position: absolute;
+    text-overflow: ellipsis;
     overflow: hidden;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: large;
